<resources xmlns:android="http://schemas.android.com/apk/res/android">
    <string name="app_name">Shifts</string>
    <string name="title_section1">Βάρδιες</string>
    <string name="title_section2">Εργαζόμενος</string>
    <string name="title_section3">Τρέχον Πρόγραμμα</string>
    <string name="title_section4">Κανονική Αδεια</string>
    <string name="title_section5">Ερωτήσεις</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="title_activity_insertion_of_employee">Προσθήκη Εργαζομένου</string>
    <string name="title_activity_shift_manager">ShiftManager</string>
    <string name="title_activity_paid_leave_manager">PaidLeaveManager</string>
    <string name="title_activity_diary_view">ΗΜΕΡΟΛΟΓΙΟ</string>
    <string name="title_activity_one_shift_insertion">Προσθήκη Βάρδιας</string>
    <string name="title_activity_two_weeks_insertion">Εισαγωγή Βαρδιών</string>
    <string name="title_activity_query_dates_manager">Αποτελέσματα</string>
    <string name="title_activity_of_work_insertion">Προσθήκη Αδείας</string>
    <string android:id="@+id/string1" name="NameOfWeekDay" android:layout_width="wrap_content" android:layout_height="wrap_content">Ημέρα</string>
    <string android:id="@+id/string2" name="titleOfLastShifts" android:layout_width="wrap_content" android:layout_height="wrap_content">Τελευταίο Πρόγραμμα</string>
    <string android:id="@+id/string3" name="ShiftValue" android:layout_width="wrap_content" android:layout_height="wrap_content">Βάρδια</string>
    <string name="ShiftDate">Ημερ/νία</string>
    <string name="ShiftWeekDay">Ημέρα</string>
    <string name="ShiftCurValue">Βάρδια</string>
    <string name="ShiftSunday">Κυριακή</string>
    <string name="ShiftHoliday">Αργία</string>
    <string name="Spinner_DayPrompt">Επέλεξε Ημέρα</string>
    <string name="Spinner_DatePrompt">Επέλεξε Ημερομηνία</string>
    <string name="Spinner_ShiftPrompt">Επέλεξε Βάρδια</string>
    <string name="menu_settings">Ρυθμίσεις</string>
    <string name="ComensShift_item">Σχόλια</string>
    <string name="title_activity_display_shift">Προβολή Βάρδιας</string>
    <string name="title_activity_show_app_info">Βοήθεια</string>
    <string name="title_activity_display_extra_repo">Τα Ρεπό Αναλυτικά</string>
    <string name="title_activity_show_worked_holidays">Κυριακές - Αργίες</string>
    <string name="title_activity_show_sum_results">Ανάλυση Βαρδιών</string>
    <string name="title_activity_show_report_of_repo">Ρεπό Εκτεταμένης Διάρκειας</string>
    <string name="title_activity_developer_info">Δημιουργός Εφαρμογής</string>
    <string name="title_activity_display_web_info">facebook</string>
    <string name="title_activity_display_of_work_year">Προβολή Αδειών</string>
    <string name="title_activity_update_employee">Αλλαγή Εργαζόμενου</string>
    <string name="title_activity_update_shift">Αλλαγή Βάρδιας</string>
    <string name="title_activity_update_of_work">Αλλαγή Άδειας</string>
    <string name="title_activity_display_interval_of_shifts">DesplayIntervalOfShifts</string>
    <string name="label_title_display_interval_of_shifts">Χρονικό Διάστημα Βαρδιών</string>
    <string name="Button_Back">Επιστροφή</string>
    <string name="Button_OK">OK</string>
    <string name="Button_Delete">Διαγραφή</string>
    <string name="button_title_set_date">Ανάθεση</string>
    <string name="button_presh_here">Πατήστε εδώ</string>
    <string name="Start_Date">Από Ημερομηνία</string>
    <string name="End_Date">Έως Ημερομηνία</string>
    <string name="Help">Βοήθεια</string>
    <string name="label_emplo_code">Κωδικός</string>
    <string name="label_emplo_name">Όνομα</string>
    <string name="label_emplo_lastname">Επώνυμο</string>
    <string name="label_emplo_address">Διεύθυνση</string>
    <string name="label_emplo_phone">Τηλέφωνο</string>
    <string name="label_emplo_mobile">Κινητό Τηλ.</string>
    <string name="label_emplo_job">Επάγγελμα</string>
    <string name="label_emplo_company">Εταιρεία</string>
    <string name="label_emplo_departement">Τομέας</string>
    <string name="label_emplo_grade">Βαθμός</string>
    <string name="label_emplo_photo">Φωτογραφία</string>
    <string name="label_one_shift_date">Ημερομηνία</string>
    <string name="label_one_shift_day">Ημέρα</string>
    <string name="label_one_shift_shift">Βάρδια</string>
    <string name="label_one_shift_sunday">Κυριακή</string>
    <string name="label_one_shift_holiday">Αργία</string>
    <string name="label_one_shift_coments">Σχόλια</string>
    <string name="label_title_appl_info">Οδηγός της Εφαρμογής</string>
    <string name="label_dialog_start_time">Ώρα Έναρξης</string>
    <string name="label_dialog_end_time">Ώρα Λήξης</string>
    <string name="label_day_off_annualdayoffs">Δικαιούστε</string>
    <string name="label_repo_you_have_taken">Πήρατε</string>
    <string name="label_repo_rights_in_dayoff">Δικαιούστε Extra</string>
    <string name="label_repo_have_taken_extra">Πήρατε Extra</string>
    <string name="label_repo_rest_extra_dayoff">Σας Ωφείλουν</string>
    <string name="label_annual_leave_year">Έτος Αδείας</string>
    <string name="label_annual_leave_categ_name">Κανονική Άδεια</string>
    <string name="label_annual_leave_have_right">Δικαιούστε</string>
    <string name="label_annual_leave_have_taken">Πήρατε</string>
    <string name="label_annual_leave_rest">Υπόλοιπο</string>
    <string name="label_annual_leave_categ_others">Λοιπές Άδειες</string>
    <string name="label_one_shift_holiday_name">Όνομα Αργίας</string>
    <string name="label_total_shifts">Πλήθος Βαρδιών</string>
    <string name="label_day_off_total">Πλήθος Ρεπό</string>
    <string name="label_day_off_3_days">3-ήμερα</string>
    <string name="label_day_off_4_days">4-ήμερα</string>
    <string name="label_day_off_5_days">5-ήμερα</string>
    <string name="label_sum_results_mornings">Πρωϊνά</string>
    <string name="label_sum_results_aftenoon">Απογεύματα</string>
    <string name="label_sum_results_nights">Βράδια</string>
    <string name="label_sum_results_days_off">Ρεπό</string>
    <string name="label_sum_results_sicks">Ασθένεια</string>
    <string name="label_user_name">Όνομα Χρήστη</string>
    <string name="label_user_pass">Κωδικός</string>
    <string name="label_wrong_pass">Λάθος Κωδικός !!!</string>
    <string name="mes_wrong_user">Δεν συμπληρώσατε Username</string>
    <string name="mes_wrong_pass">Δεν συμπληρώσατε Password</string>
    <string name="title_username_pass">Εισαγωγή Username-Password</string>
    <string name="title_pass">Εισαγωγή Password</string>
    <string name="label_leave_selection">Επιλογή Αδείας</string>
    <string name="label_leave_start_date">Ημ/νία Έναρξης</string>
    <string name="label_leave_end_date">Ημ/νία Λήξης</string>
    <string name="label_leave_category">Κατηγορία</string>
    <string name="label_leave_year">Έτος Αδείας</string>
    <string name="label_leave_duration">Διάρκεια</string>
    <string name="label_leave_total_rights">Δικαιούστε</string>
    <string name="label_offworks_number">No</string>
    <string name="label_offworks_from">From</string>
    <string name="label_offworks_to">To</string>
    <string name="label_offworks_days">Days</string>
    <string name="label_offworks_type">Type</string>
    <string name="title_activity_year_of_works">Έτος Ρεπό</string>
    <string name="navigation_drawer_open">Άνοιγμα Πλοηγητή</string>
    <string name="navigation_drawer_close">Κλείσιμο Πλοηγητή</string>
    <string name="action_example">Παράδειγμα Δράσης</string>
    <string name="title_activity_settings_shifts">Ρυθμίσεις</string>
    <string name="message_update_photo">Η Φωτογραφία Άλλαξε</string>
    <string name="pref_categ_general_title">Γενικά</string>
    <string name="pref_title_display_name">Όνομα Χρήστη</string>
    <string name="pref_default_display_name">Το Όνομά σου...</string>
    <string name="pref_title_password_prompt">Password</string>
    <string name="pref_title_header_language">Γλώσσα</string>
    <string name="pref_title_select_language">Επιλογή Γλώσσας</string>
    <string-array name="pref_language_list_titles">
        <item>Ελληνικά</item>
        <item>Αγγλικά</item>
    </string-array>
    <string-array name="pref_language_list_values">
        <item>el</item>
        <item>en</item>
    </string-array>
    <string name="pref_title_header_password">Κωδικός Εφαρμογής</string>
    <string name="pref_title_password">Χρήση Κωδικού</string>
    <string name="pref_set_password">Εισαγωγή Κωδικού</string>
    <string name="pref_use_password">Χρήση Κωδικού</string>
    <string name="pref_add_password">Εισαγωγή Κωδικού</string>
    <string-array name="pref_using_password">
        <item>Ενεργό</item>
        <item>Ανενεργό</item>
    </string-array>
    <string-array name="pref_pass_using_values">
        <item>0</item>
        <item>1</item>
    </string-array>
    <string name="pref_title_header_background">Φόντο</string>
    <string name="pref_title_background">Επιλογή Φόντου</string>
    <string-array name="pref_background_titles">
        <item>blue </item>
        <item>blue light</item>
        <item>blue nice 1</item>
        <item>blue nice 2</item>
        <item>moon</item>
        <item>galaxy</item>
        <item>natureu 1</item>
        <item>natureu 2</item>
        <item>natureu 3</item>
        <item>natureu 4</item>
        <item>rain 1</item>
        <item>rain 2</item>
        <item>black</item>
    </string-array>
    <string-array name="pref_background_values">
        <item>0</item>
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
        <item>5</item>
        <item>6</item>
        <item>7</item>
        <item>8</item>
        <item>9</item>
        <item>10</item>
        <item>11</item>
        <item>12</item>
    </string-array>
    <string name="pref_title_system_sync_settings">Συγχ. Ρυθμίσεων Συστήματος</string>
    <string name="pref_title_header_notifications">Υπενθυμίσεις</string>
    <string name="pref_title_new_message_notifications">Μήνυμα Υπενθύμισης</string>
    <string name="pref_title_ringtone">Κουδούνισμα</string>
    <string name="pref_ringtone_silent">Σιωπηλό</string>
    <string name="pref_title_vibrate">Δόνηση</string>
    <string name="pref_header_general">Γενικά</string>
    <string name="pref_title_social_recommendations">Ενεργοποίηση Κοινωνικών Συστάσεων</string>
    <string name="pref_description_social_recommendations">Συστάσεις για επαφές με ανθρώπους που
        βασίζονται στο ιστορικό των μηνυμάτων σου</string>
    <string name="pref_title_add_friends_to_messages">Προσθήκη Φίλων στα Μηνύματα</string>
    <string-array name="pref_example_list_titles">
        <item>Πάντα</item>
        <item>Όταν ειναι δυνατό</item>
        <item>Ποτέ</item>
    </string-array>
    <string-array name="pref_example_list_values">
        <item>1</item>
        <item>0</item>
        <item>-1</item>
    </string-array>
    <string name="pref_header_data_sync">Δεδομένα &amp; sync</string>
    <string name="pref_title_sync_frequency">Συχνότητα Συγχρονισμού</string>
    <string-array name="pref_sync_frequency_titles">
        <item>15 λεπτά</item>
        <item>30 λεπτά</item>
        <item>1 Ώρα</item>
        <item>3 Ώρες</item>
        <item>6 Ώρες</item>
        <item>Ποτέ</item>
    </string-array>
    <string-array name="pref_sync_frequency_values">
        <item>15</item>
        <item>30</item>
        <item>60</item>
        <item>180</item>
        <item>360</item>
        <item>-1</item>
    </string-array>
    <string-array name="list_preference_entries">
        <item>Εισαγωγή 1</item>
        <item>Εισαγωγή 2</item>
        <item>Εισαγωγή 3</item>
    </string-array>
    <string-array name="list_preference_entry_values">
        <item>1</item>
        <item>2</item>
        <item>3</item>
    </string-array>
    <string-array name="multi_select_list_preference_default_value"/>
</resources>