<preference-headers xmlns:android="http://schemas.android.com/apk/res/android" >

    <!-- These settings headers are only used on tablets. -->    
    <header
        android:fragment="com.kutsubogeras.shifts.settings.SettingsShifts$GeneralPreferenceFragment"
        android:title="@string/pref_categ_general_title" />
    <header
        android:fragment="com.kutsubogeras.shifts.settings.SettingsShifts$PasswordFragment"
        android:title="@string/pref_title_header_password" />
    <header
        android:fragment="com.kutsubogeras.shifts.settings.SettingsShifts$NotificationPreferenceFragment"
        android:title="@string/pref_title_header_notifications" />
    <header
        android:fragment="com.kutsubogeras.shifts.settings.SettingsShifts$DataSyncPreferenceFragment"
        android:title="@string/pref_title_header_background" />

</preference-headers>
