<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/FrameLayout_employee_update"
    style="@style/LabelRoundedCornerStyle"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/wallpaper_galaxy" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content" >

            <TextView
                android:id="@+id/textView_OfWorkYear_Title"
                style="@style/BackgroundButtonsStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:gravity="center_vertical|center_horizontal"
                android:minHeight="50dp"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:textSize="24sp"
                android:textStyle="italic" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="10dp" >

            <TextView
                android:id="@+id/textView_OfWorkCategoryItem_DaysTake"
                style="@style/LabelRoundedCornerStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center_vertical|center_horizontal"
                android:minWidth="140dp"
                android:text="@string/label_annual_leave_year"
                android:textAppearance="?android:attr/textAppearanceMedium" />

            <Spinner
                android:id="@+id/Spinner_OfWorkYear_Year"
                style="@style/TextFieldStyleForQueryDates"
                android:layout_width="120dp"
                android:layout_height="35dp"
                android:layout_gravity="center_vertical"
                android:layout_marginLeft="10dp"
                android:gravity="center_vertical|center_horizontal"
                android:minHeight="35dp"
                android:minWidth="120dp" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="5dp" >

            <TextView
                android:id="@+id/textView12"
                style="@style/LabelRoundedCornerStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:gravity="center_vertical|center_horizontal"
                android:minHeight="35dp"
                android:minWidth="135dp"
                android:text="@string/label_annual_leave_categ_name"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:textStyle="bold" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="5dp" >

            <TextView
                android:id="@+id/textView_OfWorkCategoryItem_TotalDays"
                style="@style/LabelRoundedCornerStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center_vertical|center_horizontal"
                android:minWidth="140dp"
                android:text="@string/label_annual_leave_have_right"
                android:textAppearance="?android:attr/textAppearanceMedium" />

            <TextView
                android:id="@+id/textView_OfWorkYear_SumDays"
                style="@style/TextFieldAddShiftsFormStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_marginLeft="10dp"
                android:gravity="center_vertical|center_horizontal"
                android:minHeight="35dp"
                android:minWidth="120dp"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:textColor="@color/Color_blue"
                android:textStyle="bold" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="5dp" >

            <TextView
                android:id="@+id/textView6"
                style="@style/LabelRoundedCornerStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center_vertical|center_horizontal"
                android:minWidth="140dp"
                android:text="@string/label_annual_leave_have_taken"
                android:textAppearance="?android:attr/textAppearanceMedium" />

            <TextView
                android:id="@+id/textView_OfWorkYear_DaysTake"
                style="@style/TextFieldAddShiftsFormStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_marginLeft="10dp"
                android:gravity="center_vertical|center_horizontal"
                android:minHeight="35dp"
                android:minWidth="120dp"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:textColor="@color/Color_Dark_Green3"
                android:textStyle="bold" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="5dp" >

            <TextView
                android:id="@+id/textView8"
                style="@style/LabelRoundedCornerStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center_vertical|center_horizontal"
                android:minWidth="140dp"
                android:text="@string/label_annual_leave_rest"
                android:textAppearance="?android:attr/textAppearanceMedium" />

            <TextView
                android:id="@+id/textView_OfWorkYear_Rest"
                style="@style/TextFieldAddShiftsFormStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_marginLeft="10dp"
                android:gravity="center_vertical|center_horizontal"
                android:minHeight="35dp"
                android:minWidth="120dp"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:textColor="@color/Color_Magenta"
                android:textStyle="bold" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="5dp" >

            <TextView
                android:id="@+id/textView13"
                style="@style/LabelRoundedCornerStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:gravity="center_vertical|center_horizontal"
                android:minHeight="35dp"
                android:minWidth="135dp"
                android:text="@string/label_annual_leave_categ_others"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:textStyle="bold" />

        </LinearLayout>

        <ListView
            android:id="@+id/listView_OfWorkYear_List"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="62dp"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_marginTop="5dp" >
        </ListView>
    </LinearLayout>

    <LinearLayout
        style="@style/BackgroundButtonsStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|center|end"
        android:minHeight="55dp" >

        <Button
            android:id="@+id/button_OfWorkYear_Back"
            style="@style/MyShiftAddDatesButtonStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_marginLeft="10dp"
            android:background="@drawable/shift_add_dates_button_background"
            android:minWidth="95dp"
            android:text="@string/Button_Back" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1" >
        </LinearLayout>

        <Button
            android:id="@+id/button_OfWorkYear_OK"
            style="@drawable/shift_ok_button_background"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:background="@drawable/shift_ok_button_background"
            android:minWidth="90dp"
            android:text="@string/Button_OK" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1" >

        </LinearLayout>

        <Button
            android:id="@+id/button_OfWorkYear_Reset"
            style="@style/MyShiftResetButtonStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_marginRight="10dp"
            android:background="@drawable/shift_reset_button_background"
            android:minWidth="90dp"
            android:text="@string/Button_Delete" />

    </LinearLayout>

</FrameLayout>
