<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/FrameLayout_container_2"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/wallpaper_galaxy"
    tools:context="com.kutsubogeras.shifts.OfWorkInsertion$PlaceholderFragment" >

    <TextView
        android:id="@+id/section_label_4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="TextView"
        android:visibility="invisible" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical" >

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="10dp"
            android:orientation="horizontal" >

            <TextView
                android:id="@+id/TextView_Time_start_Dialog"
                style="@style/LabelRoundedCornerStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:gravity="left|center_vertical"
                android:maxHeight="30dp"
                android:maxWidth="130dp"
                android:minHeight="30dp"
                android:minWidth="130dp"
                android:paddingLeft="5dp"
                android:text="@string/label_annual_leave_year"
                android:textColor="@color/Color_Black"
                android:textSize="16sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/TextView_OfWork_Year"
                style="@style/TextFieldAddShiftsFormStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:gravity="center_vertical|center_horizontal"
                android:maxWidth="100dp"
                android:minWidth="100dp"
                android:textColor="@color/Color_blue"
                android:textSize="16sp"
                android:textStyle="bold" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="5dp"
            android:orientation="horizontal" >

            <TextView
                android:id="@+id/textView_ItemResult_WeekDay"
                style="@style/LabelRoundedCornerStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:gravity="left|center_vertical"
                android:maxHeight="30dp"
                android:maxWidth="130dp"
                android:minHeight="30dp"
                android:minWidth="130dp"
                android:paddingLeft="5dp"
                android:text="@string/label_annual_leave_have_right"
                android:textColor="@color/Color_Black"
                android:textSize="16sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/textView_OfWork_TotalDays"
                style="@style/TextFieldAddShiftsFormStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:gravity="center_vertical|center_horizontal"
                android:maxWidth="100dp"
                android:minWidth="100dp"
                android:textColor="@color/Color_blue"
                android:textSize="16sp"
                android:textStyle="bold" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="5dp"
            android:orientation="horizontal" >

            <TextView
                android:id="@+id/textView_ExtraRepo_SumTake"
                style="@style/LabelRoundedCornerStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:gravity="left|center_vertical"
                android:maxHeight="30dp"
                android:maxWidth="130dp"
                android:minHeight="30dp"
                android:minWidth="130dp"
                android:paddingLeft="5dp"
                android:text="@string/label_annual_leave_have_taken"
                android:textColor="@color/Color_Black"
                android:textSize="16sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/textView_OfWork_DaysHaveTake"
                style="@style/TextFieldAddShiftsFormStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:gravity="center_vertical|center_horizontal"
                android:maxWidth="100dp"
                android:minWidth="100dp"
                android:textColor="@color/Color_Red"
                android:textSize="16sp"
                android:textStyle="bold" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="5dp" >

            <TextView
                android:id="@+id/textView_ofWork_duration"
                style="@style/LabelRoundedCornerStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:gravity="left|center_vertical"
                android:maxWidth="130dp"
                android:minHeight="30dp"
                android:minWidth="130dp"
                android:paddingLeft="5dp"
                android:text="@string/label_annual_leave_rest"
                android:textColor="@color/Color_Black"
                android:textSize="16sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/textView_OfWork_Restdays"
                style="@style/TextFieldAddShiftsFormStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:gravity="center_vertical|center_horizontal"
                android:maxWidth="100dp"
                android:minWidth="100dp"
                android:textColor="@color/Color_Dark_Green3"
                android:textSize="16sp"
                android:textStyle="bold" />

        </LinearLayout>

    </LinearLayout>

</FrameLayout>
